# exp-matrix-pinn

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  train.py
src/configs/: train.yaml
src/configs/criterion/: pinn.yaml  point.yaml  point_hard.yaml  trajectory.yaml  trajectory_hard.yaml
src/configs/dataloader/: default.yaml
src/configs/dataset/: pinn.yaml  point.yaml  trajectory.yaml
src/configs/lr_scheduler/: cosine.yaml
src/configs/metrics/: default.yaml
src/configs/model/: baseline.yaml  conv1d_pinn.yaml  film.yaml  film_mlp.yaml  hard_baseline.yaml  hard_film.yaml  hard_resnet.yaml  mlp.yaml  resnet.yaml  resnet_tc.yaml
src/configs/writer/: cometml.yaml
src/dataset/: base.py  pinn_sampler.py  supervised_dataset.py  utils.py
src/logger/: cometml.py  utils.py
src/loss/: base.py  pinn.py
src/metrics/: base.py  cosine_similarity.py  relative_l2_error.py  relative_norm_drift.py  tracker.py
src/model/: base.py  utils.py
src/model/pinn/: __init__.py  model.py
src/model/pinn/solver/: __init__.py  baseline.py  conv1d.py  film.py  film_mlp.py  fourier.py  mlp.py  residual.py  resnet.py
src/trainer/: base.py  pinn.py  utils.py
src/utils/: ema.py  init.py  torch.py
