[project]
name = "exp-matrix-pinn"
version = "0.1.0"
description = "Approximation of Matrix Exponential with Physics Informed Neural Networks."
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "comet-ml==3.57.3",
    "hydra-core==1.3.2",
    "matplotlib==3.10.8",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pillow==12.2.0",
    "scipy==1.17.1",
    "torch==2.11.0",
    "torchmetrics==1.9.0",
    "tqdm>=4.67.3",
    "transformers==5.6.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "ruff==0.15.11",
    "ty==0.0.32",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 100
